Add some indexing tests (from common test suite)

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit colors="true" bootstrap="tests/bootstrap.php">
+    <ini name="date.timezone" value="UTC"/>
     <testsuites>
         <testsuite name="Community">
             <directory suffix="Test.php">tests/Integration/</directory>
